# ffms2

./: CMakeLists.txt
src/: CmakeLists.txt
src/avisynth/: CmakeLists.txt
src/core/: CMakeLists.txt
src/index/: CMakeLists.txt
src/vapoursynth/: CMakeLists.txt
